new data format

--- a/img_desc/templates/img_desc/Q.html
+++ b/img_desc/templates/img_desc/Q.html
@@ -6,24 +6,27 @@ Round {{view.round_number}}/{{session.vars.num_rounds}}
 {% endblock %}
 
 {% block content %}
+
 {% if player.role == Constants.PRODUCER %}
 <div class="card">
     <div class="card-body text-center">
 
         <img width="500px" src="{{player.get_image_url}}" alt="">
     </div>
-    {% include "img_desc/includes/p_form.html" %} 
- 
+    {% include "img_desc/includes/p_form.html" %}
+
 </div>
 {% endif %}
 {% if player.role == Constants.INTERPRETER %}
-{% for s in player.get_sentences %}
-<div class="alert alert-info lead text-center">{{s}}</div>
-{% endfor %}
-{% include "img_desc/includes/i_form.html" %} 
+<div class="alert alert-info lead text-center">
+    {% for s in player.get_full_sentences %}
+    {{s}} <br>
+    {% endfor %}
+</div>
+{% include "img_desc/includes/i_form.html" %}
 
 {% endif %}
 
- 
+
 
 {% endblock %}
