--- a/start/templates/start/EndOfIntro.html
+++ b/start/templates/start/EndOfIntro.html
@@ -19,7 +19,7 @@
     <p class="c0"><span class="c1">Only sweets that are need to reward the children should be bought.</span></p>
     <p class="c0"><span class="c1">&nbsp;</span></p>
     <p class="c0"><span class="c1">&nbsp;</span></p>
-    <p class="c5"><span class="c6">The experiment starts when you press the Next-button!</span></p>
+    <p class="c5"><span class="c6">The experiment starts when you press the 'Next' button!</span></p>
     <p class="c2"><span class="c3"></span></p>
     {% next_button %}
 
