--- a/img_desc/templates/img_desc/includes/p_form.html
+++ b/img_desc/templates/img_desc/includes/p_form.html
@@ -53,9 +53,27 @@
 </style>
 <div id="app" class="text-center" v-cloak>
     {% verbatim %}
+  <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmModalLabel">Confirm Submission</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to submit?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" @click="submitForm">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-    <div id="app" class="container mt-5">
+    <div   class="container mt-5">
         
         <div class="modal" tabindex="-1" role="dialog" id="infoModal">
             <div class="modal-dialog" role="document">
@@ -189,12 +207,17 @@
                     this.durationInSeconds = (new Date(this.endTime) - new Date(this.startTime)) / 1000;
 
                     this.$nextTick(() => {
+                         $('#confirmModal').modal('show');
                         // After the next DOM update cycle
-                        $('#form').submit()
+                        
                     });
 
                 }
             },
+            submitForm: function() {
+    // Your submit logic here
+    $('#form').submit();
+  },
             isValid() {
                 return this.items.every((item) => {
                     return item.fields.every((field) => {
