--- a/start/templates/start/Practice5.html
+++ b/start/templates/start/Practice5.html
@@ -64,7 +64,7 @@
                         </div>
                         <button @click="addItem" style="flex-basis: 75px;" type="button" class="btn btn-success"
                             disabled>+</button>
-                        <button @click="removeItem(index)" type="button" disabled class="btn btn-danger"
+                        <button @click="removeItem(itemIndex)" type="button" disabled class="btn btn-danger"
                             style="flex-basis: 75px;">-</button>
 
                     </div>
