--- a/img_desc/templates/img_desc/includes/i_form.html
+++ b/img_desc/templates/img_desc/includes/i_form.html
@@ -38,7 +38,7 @@
     </form>
     {% endverbatim %}
 </div>
-<script src="https://unpkg.com/vue@next"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script>
     const app = Vue.createApp({
         data() {
