--- a/start/templates/start/Practice2.html
+++ b/start/templates/start/Practice2.html
@@ -47,7 +47,7 @@
     </form>
     {% endverbatim %}
 </div>
-<script src="https://unpkg.com/vue@next"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script>
     const app = Vue.createApp({
         data() {
