--- a/start/templates/start/Practice4.html
+++ b/start/templates/start/Practice4.html
@@ -61,7 +61,7 @@
 
     {% endverbatim %}
 </div>
-<script src="https://unpkg.com/vue@next"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script>
 
     const app = Vue.createApp({
