--- a/start/templates/start/Practice5.html
+++ b/start/templates/start/Practice5.html
@@ -81,7 +81,7 @@
 
 {% endverbatim %}
 </div>
-<script src="https://unpkg.com/vue@next"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script>
     window.prefix = {{ session.vars.prefix | json }};
     window.suffixes = {{ session.vars.suffixes | json }}
