--- a/start/templates/start/Practice6.html
+++ b/start/templates/start/Practice6.html
@@ -88,6 +88,7 @@
     window.suffixes = {{ session.vars.suffixes | json }}
     window.allowedValues = {{ session.vars.allowed_values | json }}
     window.regex = {{ session.vars.allowed_regex | json }};
+    window.caseflag = {{ session.vars.caseflag | json }};
 </script>
 
 <script>
