--- a/start/templates/start/Demographics.html
+++ b/start/templates/start/Demographics.html
@@ -17,12 +17,14 @@
     </table>
 </h2>
 
- <b> We ask you to provide us with the following information, which will be treated confidentially and stored
-        anonymously: </b> <br> <br>
 
-{%formfields%}
+    <script src="https://unpkg.com/survey-jquery@1.9.115/survey.jquery.min.js"></script>
+    <script src="https://unpkg.com/survey-jquery@1.9.115/themes/index.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/survey-jquery@1.9.115/defaultV2.min.css" />
+    <div id="surveyElement" ></div>
+    <input type="hidden" id="survey_data" value="" name="survey_data">
+    <script src="{% static 'global/js/demographics.js' %}"></script>
 
- 
-{% next_button %}
+
 
 {% endblock %}
